# pacman.ml

./: .gitignore  CMakeLists.txt  README.md  flake.nix  pyproject.toml
deep-qlearning/: dqn_agent.py  dqn_model.py  pacman_env.py  replay_buffer.py  train.py
pacman/: main.c
pacman/api/: api_game.c  api_game.h  api_server.c  api_server.h
presentation/: background-knowledge.md  index.html  presentation.md  styles.css
qlearning/: config.py  pacman_env.py  qlearn.py  train.py
