[tool.poetry]
name = "pacman-qlearning"
version = "0.1.0"
description = "Q-Learning agent for Pacman"
authors = ["Pazl27"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
