[tool.poetry]
name = "pacman-qlearning"
version = "0.1.0"
description = "Q-Learning and Deep Q-Learning agents for Pacman"
authors = ["Pazl27"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.26.0"
torch = "^2.0.0"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"